--- a/index.html
+++ b/index.html
@@ -1,63 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>NO MORE INVISIBLE OBJECTS TEST</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <style>
-      body { margin: 0; overflow: hidden; }
-      video, canvas.a-canvas {
-        position: fixed !important;
-        top: 0; left: 0;
-        width: 100vw !important;
-        height: 100vh !important;
-        object-fit: cover !important;
-        z-index: -3 !important;
-      }
-    </style>
   </head>
   <body>
-    <a-scene
-      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true;"
-      embedded
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: true"
-    >
-      <a-light type="ambient" intensity="2.0"></a-light>
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
+        <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
+      </a-assets>
 
-      <a-entity mindar-image-tracker>
-        <a-entity mindar-image-target="targetIndex: 0" id="targetAnchor">
-          <a-box
-            id="hugeBox"
-            position="0 0 0"
-            scale="5 5 5"
-            color="#00FF00"
-          ></a-box>
-        </a-entity>
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
       </a-entity>
     </a-scene>
-
-    <script>
-      document.querySelector('a-scene').addEventListener('loaded', () => {
-        console.log("✅ Scene loaded");
-
-        const anchor = document.querySelector("#targetAnchor");
-        const cube = document.querySelector("#hugeBox");
-
-        anchor.addEventListener("targetFound", () => {
-          console.log("🟢 TARGET FOUND - FORCING BOX VISIBLE");
-          cube.setAttribute("visible", true);
-        });
-
-        anchor.addEventListener("targetLost", () => {
-          console.log("🔴 TARGET LOST - Hiding box");
-          cube.setAttribute("visible", false);
-        });
-      });
-    </script>
   </body>
 </html>
-
