--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-       <a-plane src="#businessCardImage" position="0 0 0" height="0.552" width="1" rotation="0 0 90"></a-plane>
+       <a-plane 
+  src="#businessCardImage"
+  position="0 0 0"
+  height="0.552"
+  width="1"
+  rotation="0 0 90"
+  material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1">
+</a-plane>
         <a-gltf-model 
   src="#portalModel"
   position="0 0 0.1"
