--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html> 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
@@ -17,7 +17,13 @@
         <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
       </a-assets>
 
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <!-- ✅ Camera updated for click detection -->
+      <a-camera 
+        position="0 0 0" 
+        look-controls="enabled: false" 
+        cursor="rayOrigin: mouse"
+        raycaster="objects: .clickable">
+      </a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
         <!-- Glowing PNG -->
@@ -27,34 +33,5 @@
           height="0.552"
           width="1"
           rotation="0 0 90"
-          material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1">
-        </a-plane>
+          material="shader
 
-        <!-- Clickable Portal -->
-        <a-entity 
-          position="0 0 0.1" 
-          scale="0.3 0.3 0.3" 
-          rotation="0 0 0" 
-          link-opener>
-          
-          <a-gltf-model 
-            src="#portalModel"
-            animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-          </a-gltf-model>
-
-        </a-entity>
-      </a-entity>
-    </a-scene>
-
-    <!-- JS to make the model clickable -->
-    <script>
-      AFRAME.registerComponent('link-opener', {
-        init: function () {
-          this.el.addEventListener('click', () => {
-            window.open('https://neondoorway.com', '_blank');
-          });
-        }
-      });
-    </script>
-  </body>
-</html>
