--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
-<html> 
+<!DOCTYPE html>
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <title>Neon AR Business Card</title>
+    <style>
+      body { margin: 0; overflow: hidden; }
+      .ar-scene-container {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <a-scene 
-      mindar-image="imageTargetSrc: https://rickfouche.github.io/NeonAR1/targets/NDCard.mind;" 
-      color-space="sRGB" 
-      renderer="colorManagement: true, physicallyCorrectLights" 
-      vr-mode-ui="enabled: false" 
-      device-orientation-permission-ui="enabled: false">
+    <div class="ar-scene-container">
+      <a-scene
+        mindar-image="imageTargetSrc: https://rickfouche.github.io/NeonAR1/targets/NDCard.mind;"
+        color-space="sRGB"
+        renderer="colorManagement: true, physicallyCorrectLights"
+        vr-mode-ui="enabled: false"
+        device-orientation-permission-ui="enabled: false">
 
-      <a-assets>
-        <img id="businessCardImage" src="https://rickfouche.github.io/NeonAR1/png/Business%20Card4.png" />
-        <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
-      </a-assets>
+        <a-assets>
+          <img id="businessCardImage" src="https://rickfouche.github.io/NeonAR1/png/Business%20Card4.png" />
+          <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
+        </a-assets>
 
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0">
-        <!-- Glowing PNG -->
-        <a-plane 
-          src="#businessCardImage"
-          position="0 0 0"
-          height="0.552"
-          width="1"
-          rotation="0 0 90"
-          material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1">
-        </a-plane>
+        <a-entity mindar-image-target="targetIndex: 0">
+          <a-plane
+            src="#businessCardImage"
+            position="0 0 0"
+            height="0.552"
+            width="1"
+            rotation="0 0 90"
+            material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1"
+            link-opener> </a-plane>
 
-        <!-- Clickable Portal -->
-        <a-entity 
-          position="0 0 0.1" 
-          scale="0.3 0.3 0.3" 
-          rotation="0 0 0" 
-          link-opener>
-          
-          <a-gltf-model 
-            src="#portalModel"
-            animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-          </a-gltf-model>
+          <a-entity
+            position="0 0 0.1"
+            scale="0.3 0.3 0.3"
+            rotation="0 0 0"
+            link-opener> <a-gltf-model
+              src="#portalModel"
+              animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-gltf-model>
 
+          </a-entity>
         </a-entity>
-      </a-entity>
-    </a-scene>
+      </a-scene>
+    </div>
 
-    <!-- JS to make the model clickable -->
     <script>
       AFRAME.registerComponent('link-opener', {
         init: function () {
