--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Neon AR Business Card</title>
     <style>
       body { margin: 0; overflow: hidden; }
+      /* Optional: Basic styling for full-screen AR experience */
       .ar-scene-container {
         position: relative;
         width: 100vw;
@@ -28,7 +29,10 @@
           <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-camera
+          position="0 0 0"
+          look-controls="enabled: false"
+          raycaster="objects: [link-opener];"  cursor="fuse: false; rayOrigin: mouse;"> </a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
           <a-plane
@@ -38,13 +42,16 @@
             width="1"
             rotation="0 0 90"
             material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1"
-            link-opener> </a-plane>
+            link-opener>
+          </a-plane>
 
           <a-entity
             position="0 0 0.1"
             scale="0.3 0.3 0.3"
             rotation="0 0 0"
-            link-opener> <a-gltf-model
+            link-opener>
+
+            <a-gltf-model
               src="#portalModel"
               animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
@@ -57,7 +64,11 @@
     <script>
       AFRAME.registerComponent('link-opener', {
         init: function () {
+          // It's good practice to log when the component is initialized
+          console.log('link-opener component initialized on:', this.el.id || this.el.tagName);
+
           this.el.addEventListener('click', () => {
+            console.log('Click detected on:', this.el.id || this.el.tagName);
             window.open('https://neondoorway.com', '_blank');
           });
         }
