--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Neon AR Business Card</title>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* Optional: Basic styling for full-screen AR experience */
       .ar-scene-container {
         position: relative;
         width: 100vw;
@@ -29,12 +28,17 @@
           <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
         </a-assets>
 
+        <!-- ✅ Cursor & raycaster look for .clickable class -->
         <a-camera
           position="0 0 0"
           look-controls="enabled: false"
-          raycaster="objects: [link-opener];"  cursor="fuse: false; rayOrigin: mouse;"> </a-camera>
+          raycaster="objects: .clickable"
+          cursor="fuse: false; rayOrigin: mouse;">
+        </a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
+
+          <!-- ✅ Glowing PNG with clickable class -->
           <a-plane
             src="#businessCardImage"
             position="0 0 0"
@@ -42,13 +46,16 @@
             width="1"
             rotation="0 0 90"
             material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1"
+            class="clickable"
             link-opener>
           </a-plane>
 
+          <!-- ✅ Clickable GLB container -->
           <a-entity
             position="0 0 0.1"
             scale="0.3 0.3 0.3"
             rotation="0 0 0"
+            class="clickable"
             link-opener>
 
             <a-gltf-model
@@ -61,14 +68,12 @@
       </a-scene>
     </div>
 
+    <!-- ✅ Click behavior component -->
     <script>
       AFRAME.registerComponent('link-opener', {
         init: function () {
-          // It's good practice to log when the component is initialized
-          console.log('link-opener component initialized on:', this.el.id || this.el.tagName);
-
           this.el.addEventListener('click', () => {
-            console.log('Click detected on:', this.el.id || this.el.tagName);
+            console.log('Portal clicked!');
             window.open('https://neondoorway.com', '_blank');
           });
         }
@@ -76,3 +81,4 @@
     </script>
   </body>
 </html>
+
