--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
         width: 100vw;
         height: 100vh;
       }
+      /* Portal Button Style */
+      #enter-button {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 14px 28px;
+        font-size: 16px;
+        background: #00ffff;
+        color: #000;
+        border: none;
+        border-radius: 8px;
+        z-index: 999;
+        display: none;
+        cursor: pointer;
+        box-shadow: 0 0 10px #00ffffaa;
+        font-weight: bold;
+      }
+
+      #enter-button:hover {
+        background: #00e0e0;
+      }
     </style>
   </head>
   <body>
@@ -28,7 +50,6 @@
           <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
         </a-assets>
 
-        <!-- ✅ Cursor & raycaster look for .clickable class -->
         <a-camera
           position="0 0 0"
           look-controls="enabled: false"
@@ -37,8 +58,6 @@
         </a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-
-          <!-- ✅ Glowing PNG with clickable class -->
           <a-plane
             src="#businessCardImage"
             position="0 0 0"
@@ -50,25 +69,25 @@
             link-opener>
           </a-plane>
 
-          <!-- ✅ Clickable GLB container -->
           <a-entity
             position="0 0 0.1"
             scale="0.3 0.3 0.3"
             rotation="0 0 0"
             class="clickable"
             link-opener>
-
             <a-gltf-model
               src="#portalModel"
               animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
-
           </a-entity>
         </a-entity>
       </a-scene>
     </div>
 
-    <!-- ✅ Click behavior component -->
+    <!-- 🔘 Portal Button -->
+    <button id="enter-button">Enter the Portal</button>
+
+    <!-- 💡 Link Component -->
     <script>
       AFRAME.registerComponent('link-opener', {
         init: function () {
@@ -79,6 +98,24 @@
         }
       });
     </script>
+
+    <!-- 🎯 Show Button on Target Found -->
+    <script>
+      const button = document.getElementById("enter-button");
+
+      AFRAME.scenes[0].addEventListener("targetFound", () => {
+        button.style.display = "block";
+      });
+
+      AFRAME.scenes[0].addEventListener("targetLost", () => {
+        button.style.display = "none";
+      });
+
+      button.addEventListener("click", () => {
+        window.location.href = "https://neondoorway.com";
+      });
+    </script>
   </body>
 </html>
+
 
