--- a/index.html
+++ b/index.html
@@ -2,40 +2,22 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Neon AR Business Card</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <title>Neon AR Business Card</title>
     <style>
-      body { margin: 0; overflow: hidden; }
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
       .ar-scene-container {
         position: relative;
         width: 100vw;
         height: 100vh;
       }
-      /* Portal Button Style */
-      #enter-button {
-        position: absolute;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        padding: 14px 28px;
-        font-size: 16px;
-        background: #00ffff;
-        color: #000;
-        border: none;
-        border-radius: 8px;
-        z-index: 999;
-        display: none;
-        cursor: pointer;
-        box-shadow: 0 0 10px #00ffffaa;
-        font-weight: bold;
-      }
-
-      #enter-button:hover {
-        background: #00e0e0;
-      }
     </style>
   </head>
+
   <body>
     <div class="ar-scene-container">
       <a-scene
@@ -43,8 +25,8 @@
         color-space="sRGB"
         renderer="colorManagement: true, physicallyCorrectLights"
         vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
-
+        device-orientation-permission-ui="enabled: false"
+      >
         <a-assets>
           <img id="businessCardImage" src="https://rickfouche.github.io/NeonAR1/png/Business%20Card4.png" />
           <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
@@ -54,8 +36,8 @@
           position="0 0 0"
           look-controls="enabled: false"
           raycaster="objects: .clickable"
-          cursor="fuse: false; rayOrigin: mouse;">
-        </a-camera>
+          cursor="fuse: false; rayOrigin: mouse;"
+        ></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
           <a-plane
@@ -65,89 +47,42 @@
             width="1"
             rotation="0 0 90"
             material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1"
-            class="clickable"
-            link-opener>
-          </a-plane>
+          ></a-plane>
 
-          <a-entity
-            position="0 0 0.1"
-            scale="0.3 0.3 0.3"
-            rotation="0 0 0"
-            class="clickable"
-            link-opener>
+          <a-entity position="0 0 0.1" scale="0.3 0.3 0.3" rotation="0 0 0">
             <a-gltf-model
               src="#portalModel"
-              animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-            </a-gltf-model>
+              animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
+            ></a-gltf-model>
           </a-entity>
         </a-entity>
       </a-scene>
     </div>
 
-    <!-- 🔘 Portal Button -->
-    <button id="enter-button">Enter the Portal</button>
-
-    <!-- 💡 Link Component -->
+    <!-- 🔁 Global click redirect on targetFound -->
     <script>
-      AFRAME.registerComponent('link-opener', {
-        init: function () {
-          this.el.addEventListener('click', () => {
-            console.log('Portal clicked!');
-            window.open('https://neondoorway.com', '_blank');
-          });
+      const target = document.querySelector("[mindar-image-target]");
+      let isTargetFound = false;
+
+      target.addEventListener("targetFound", () => {
+        console.log("✅ AR Target Found — Tap anywhere to enter");
+        isTargetFound = true;
+      });
+
+      target.addEventListener("targetLost", () => {
+        console.log("❌ AR Target Lost — Disabled screen tap");
+        isTargetFound = false;
+      });
+
+      window.addEventListener("click", () => {
+        if (isTargetFound) {
+          window.location.href = "https://neondoorway.com";
         }
       });
     </script>
-
-    <!-- 🎯 Show Button on Target Found -->
-    <script>
-      const button = document.getElementById("enter-button");
-
-      AFRAME.scenes[0].addEventListener("targetFound", () => {
-        button.style.display = "block";
-      });
-
-      AFRAME.scenes[0].addEventListener("targetLost", () => {
-        button.style.display = "none";
-      });
-
-      button.addEventListener("click", () => {
-        window.location.href = "https://neondoorway.com";
-      });
-    </script>
-<!-- Link component script -->
-<script>
-  AFRAME.registerComponent('link-opener', {
-    init: function () {
-      this.el.addEventListener('click', () => {
-        console.log('Portal clicked!');
-        window.open('https://neondoorway.com', '_blank');
-      });
-    }
-  });
-</script>
-
-<!-- ✅ Tracking + button logic — ADD THIS at the END -->
-<script>
-  const button = document.getElementById("enter-button");
-  const target = document.querySelector("[mindar-image-target]");
-
-  target.addEventListener("targetFound", () => {
-    console.log("Target found — showing button");
-    button.style.display = "block";
-  });
-
-  target.addEventListener("targetLost", () => {
-    console.log("Target lost — hiding button");
-    button.style.display = "none";
-  });
-
-  button.addEventListener("click", () => {
-    window.location.href = "https://neondoorway.com";
-  });
-</script>
-</body>
+  </body>
 </html>
+
 
 
 
