--- a/index.html
+++ b/index.html
@@ -1,46 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Neon AR Business Card</title>
+    <title>Flux.001 — Mirrorborn AR - Fighting Onyx Black</title>
+
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+
     <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      .ar-scene-container {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
-      }
+      body { margin: 0; overflow: hidden; }
+      .ar-scene-container { width: 100vw; height: 100vh; position: relative; }
+
       #tap-catcher {
+        position: fixed; top: 0; left: 0;
+        width: 100vw; height: 100vh;
+        z-index: 999; display: none;
+      }
+
+      /* ✨ Mona-style Loader */
+      #loader {
         position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
         height: 100vh;
-        z-index: 999;
-        display: none;
+        background: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.5s ease;
+      }
+
+      #nd-logo {
+        width: 220px;
+        opacity: 0;
+        animation:
+          fadeInLogo 1s ease-out forwards,
+          glow 3s ease-in-out 1.2s infinite,
+          float 4s ease-in-out 1.2s infinite;
+      }
+
+      .powered-by {
+        color: black;
+        font-size: 15px;
+        font-family: sans-serif;
+        opacity: 0;
+        margin-top: 12px;
+        animation: fadeInText 1s ease-out forwards;
+        animation-delay: 1.2s;
+      }
+
+      @keyframes fadeInLogo {
+        to { opacity: 1; }
+      }
+
+      @keyframes fadeInText {
+        to { opacity: 1; }
+      }
+
+      @keyframes glow {
+        0%, 100% { filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.25)); }
+        50% { filter: drop-shadow(0 0 12px rgba(0, 255, 255, 0.6)); }
+      }
+
+      @keyframes float {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-6px); }
       }
     </style>
   </head>
 
   <body>
+    <!-- 🚪 Front Loader -->
+    <div id="loader">
+      <img src="https://rickfouche.github.io/NeonAR1/png/ndelogo.png" alt="Neon Doorway Logo" id="nd-logo" />
+      <p class="powered-by">Powered by Neon Doorway</p>
+    </div>
+
     <div class="ar-scene-container">
       <a-scene
-        mindar-image="imageTargetSrc: https://rickfouche.github.io/NeonAR1/targets/NDCard.mind;"
+        mindar-image="imageTargetSrc: targets/NDCard.mind;"
         color-space="sRGB"
-        renderer="colorManagement: true, physicallyCorrectLights"
+        embedded
+        renderer="colorManagement: true; physicallyCorrectLights: true; toneMapping: ACESFilmic"
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false"
       >
         <a-assets>
-          <img id="businessCardImage" src="https://rickfouche.github.io/NeonAR1/png/Business%20Card4.png" />
-          <a-asset-item id="portalModel" src="https://rickfouche.github.io/NeonAR1/model/Portal.glb"></a-asset-item>
+          <a-asset-item id="fluxModel" src="model/Flux.glb"></a-asset-item>
+          <a-asset-item id="fluxPlaceholder" src="model/StillFlux.glb"></a-asset-item>
+          <img id="businessCardImage" src="https://rickfouche.github.io/WalkingFlux/png/Business%20Card4.png" />
         </a-assets>
 
+        <!-- 🔆 Lighting -->
+        <a-light type="directional" color="#ccffee" intensity="5113.5" position="-2 2 4" castShadow="true" target="#flux"></a-light>
+        <a-light type="directional" color="#aaccff" intensity="5114.0" position="3 2 -3" castShadow="true" target="#flux"></a-light>
+        <a-light type="spot" angle="30" penumbra="0.2" intensity="9115.0" color="#ffffff" position="0 5 0" target="#flux"></a-light>
+        <a-light type="point" color="#FFDAB9" intensity="15112.5" distance="7" position="0 -1 0"></a-light>
+        <a-light type="ambient" color="#8899ff" intensity="2110.2"></a-light>
+        <a-light type="directional" color="#FFF" intensity="2113.0" position="-1 2 3" shadow></a-light>
+        <a-light type="directional" color="#FFF" intensity="2111.5" position="1 -2 -3" shadow></a-light>
+        <a-light type="ambient" color="#aaffaa" intensity="112110.8"></a-light>
+
+        <!-- Camera -->
         <a-camera
           position="0 0 0"
           look-controls="enabled: false"
@@ -48,6 +113,7 @@
           cursor="fuse: false; rayOrigin: mouse;"
         ></a-camera>
 
+        <!-- Flux AR Model -->
         <a-entity mindar-image-target="targetIndex: 0">
           <a-plane
             src="#businessCardImage"
@@ -58,40 +124,60 @@
             material="shader: flat; transparent: true; opacity: 1; emissive: #00ffff; emissiveIntensity: 1"
           ></a-plane>
 
-          <a-entity position="0 0 0.1" scale="0.3 0.3 0.3" rotation="0 0 0">
-            <a-gltf-model
-              src="#portalModel"
-              animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
-            ></a-gltf-model>
-          </a-entity>
+          <a-entity
+            id="flux"
+            gltf-model="#fluxPlaceholder"
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            shadow
+          ></a-entity>
         </a-entity>
       </a-scene>
     </div>
 
-    <!-- ✅ Invisible full-screen click layer -->
     <div id="tap-catcher"></div>
 
-    <!-- ✅ Fullscreen redirect logic -->
     <script>
-      const target = document.querySelector("[mindar-image-target]");
-      const tapCatcher = document.getElementById("tap-catcher");
+      window.addEventListener("DOMContentLoaded", () => {
+        const sceneEl = document.querySelector("a-scene");
+        const loader = document.getElementById("loader");
+        const target = document.querySelector("[mindar-image-target]");
+        const tapCatcher = document.getElementById("tap-catcher");
+        const fluxModel = document.getElementById("flux");
+        let modelSwapped = false;
 
-      target.addEventListener("targetFound", () => {
-        console.log("✅ AR Target Found — enabling full-screen redirect zone");
-        tapCatcher.style.display = "block";
-      });
+        const hideLoader = () => {
+          loader.style.opacity = "0";
+          setTimeout(() => loader.style.display = "none", 500);
+        };
 
-      target.addEventListener("targetLost", () => {
-        console.log("❌ AR Target Lost — disabling full-screen redirect zone");
-        tapCatcher.style.display = "none";
-      });
+        if (sceneEl.hasLoaded) hideLoader();
+        else sceneEl.addEventListener("loaded", hideLoader);
 
-      tapCatcher.addEventListener("click", () => {
-        window.location.href = "https://neondoorway.com";
+        target.addEventListener("targetFound", () => {
+          console.log("🎯 Target Found");
+          tapCatcher.style.display = "block";
+
+          if (!modelSwapped) {
+            fluxModel.setAttribute("gltf-model", "#fluxModel");
+            fluxModel.setAttribute("animation-mixer", "clip: 1.; loop: repeat; play-all: true;");
+            modelSwapped = true;
+          }
+        });
+
+        target.addEventListener("targetLost", () => {
+          console.log("🫥 Target Lost");
+          tapCatcher.style.display = "none";
+        });
+
+        tapCatcher.addEventListener("click", () => {
+          window.location.href = "https://www.neondoorway.com/scanpacks";
+        });
       });
     </script>
   </body>
 </html>
+
 
 
 
