--- a/index.html
+++ b/index.html
@@ -171,12 +171,13 @@
         });
 
         tapCatcher.addEventListener("click", () => {
-          window.location.href = "https://www.neondoorway.com/scanpacks";
+          window.location.href = "https://shop.whitney.org";
         });
       });
     </script>
   </body>
 </html>
+
 
 
 
